# volume-slider

./: .gitignore  LICENSE  README.MD
assets/: VolumeBoxTop.STEP  VolumeBoxTopV2.STEP  Volume_Box_Bottom.STEP
volume-slider-package/: README.MD  pyproject.toml  requirements.txt
volume-slider-package/src/volume-slider/: config.yaml  main.py
volume-slider-package/src/volume-slider-arduino/: volume-slider-arduino.ino
